Resolves issue of white space in 'about' at lower widths. Enlarges h1's weight

--- a/css/custom.css
+++ b/css/custom.css
@@ -546,3 +546,7 @@
 	transform: scale(1.2);
 	z-index: 1;
 }
+
+.spacing-about-for-phones {
+	display: none;
+}
